<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/singlePostCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/singlePostImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/post_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image" />

            <TextView
                android:id="@+id/singlePostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/singlePostDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15dp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:ellipsize="end" />
            <TextView
                android:id="@+id/singleUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="By %s"
                android:layout_marginTop="20dp"
                android:layout_gravity="end"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>