<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/singlePostCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/singleUserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/user"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_delete" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/firstLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/singlePostImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/post_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image" />

                <TextView
                    android:id="@+id/singlePostTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/title"
                    android:textSize="25sp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/singlePostDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColorLink="#4294DE"
                    android:linksClickable="true"
                    android:autoLink="all"
                    android:text="@string/description"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.like.LikeButton
                        android:id="@+id/like_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="Like Button"
                        app:icon_type="thumb" />

                    <TextView
                        android:id="@+id/usersWhoLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/like_button"
                        android:layout_toRightOf="@id/like_button"
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="0" />

                    <ImageButton
                        android:id="@+id/comment_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="Comment Button"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_comment" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>