<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.adamapps.coursealert.SingleUserProfile">

    <include
        android:id="@+id/tool"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool"
        android:id="@+id/displayLayout"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.GridLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:columnCount="3"
                    app:rowCount="2"
                    grid:layout_gravity="fill_horizontal"
                    app:useDefaultMargins="true"
                    grid:alignmentMode="alignMargins">

                    <TextView
                        android:id="@+id/numberOfUserPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        grid:layout_column="0"
                        grid:layout_row="0"
                        android:text="100"
                        grid:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberOfUserFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        grid:layout_column="1"
                        grid:layout_row="0"
                        android:text="300"
                        grid:layout_gravity="center_horizontal"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberOfUserFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        grid:layout_column="2"
                        grid:layout_row="0"
                        android:text="200"
                        android:textSize="20sp"
                        grid:layout_gravity="center_horizontal"
                        grid:layout_columnSpan="1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/post_name"
                        android:text="@string/posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        grid:layout_gravity="center_horizontal"
                        grid:layout_column="0"
                        grid:layout_row="1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/followers_text"
                        android:text="@string/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        grid:layout_gravity="center_horizontal"
                        grid:layout_column="1"
                        grid:layout_row="1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/following_text"
                        android:text="@string/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        grid:layout_column="2"
                        grid:layout_row="1"
                        android:textStyle="bold" />
                </android.support.v7.widget.GridLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Follow"
                    android:background="#fff"
                    android:layout_margin="10dp"
                    android:onClick="followMe"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/singleRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/displayLayout" />
</RelativeLayout>
